--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
 </head>
 <body>
 	<h1>Cookie Clicker V0.01</h1>
- 	 <input type="text" id="numberOfCookies" value="0" class="rainbow" readonly="readonly"/>
+ 	 <input type="button" id="numberOfCookies" value="0" class="rainbow" readonly="readonly" disabled="true"/>
+ 	 <!-- Added so no one could edit the button :) -->
  	 <button onclick="incrementValue()" value="Increment Value" class="rainbow"/>Get Cookies</button>
 	<script type="text/javascript">
-	var value = parseInt(document.getElementById('numberOfCookies').value, 10);
+		var value = parseInt(document.getElementById('numberOfCookies').value, 10);
+		setInterval(incrementPerSecond,1000);
 		function incrementValue()
 	{
     	value = isNaN(value) ? 0 : value;
     	value++;
     	document.getElementById('numberOfCookies').value = value;
 	}
-	if(value == 256){
-	   console.log("");
-	}
+		function incrementPerSecond() {
+			return value = value + 1;
+		}
 	</script>
 </body>
 </html>
