--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 	<h1>Cookie Clicker V0.01</h1>
  	 <input type="button" id="numberOfCookies" value="0" class="rainbow" readonly="readonly" disabled="true"/>
  	 <!-- Added so no one could press the button :) -->
- 	 <button onclick="incrementValue()" value="Increment Value" class="rainbow"/>Get Cookies</button>
- 	 <p id="Demo"></p>
+ 	 <button onclick="incrementValue(1)" value="Increment Value" class="rainbow"/>Get Cookies</button>
+ 	 <br />
+ 	 <button id="buyCursor" onclick="buyUpg1()">Buy a Cursor</button>
+ 	 <br />
+ 	 <input type="text" class="addAutoClicks rainbow" id="amountOfCursors" placeholder="Hi :)" readonly="true">
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
