--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<h1>Cookie Clicker V0.01</h1>
- 	 <input type="button" id="numberOfCookies" value="0" class="rainbow" readonly="readonly" disabled="true"/>
+	<h1>Cookie Clicker V0.021</h1>
+ 	 <input type="button" id="nOC" value="0" class="rainbow" readonly="readonly" disabled="true"/>
  	 <!-- Added so no one could press the button :) -->
- 	 <button onclick="incrementValue(1)" value="Increment Value" class="rainbow"/>Get Cookies</button>
+ 	 <button onclick="incrementValue(cPC)" value="Increment Value" class="rainbow"/>Get Cookies</button>
  	 <br />
  	 <button id="buyCursor" onclick="buyUpg1()">Buy a Cursor</button>
  	 <br />
- 	 <input type="text" class="addAutoClicks rainbow" id="amountOfCursors" placeholder="Hi :)" readonly="true">
+ 	 <input type="text" class="rainbow" id="aOC" placeholder="Hi :)" readonly="true">
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
