added save feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
  	 <br />
  	 <button id="buyCursor" onclick="buyUpg1()">Buy a Cursor</button>
  	 <br />
- 	 <input type="text" class="rainbow" id="aOC" placeholder="Hi :)" readonly="true">
+ 	 <input type="text" class="rainbow" id="aOC" placeholder="Hi :)" readonly="true"><br>
+ 	 <button id="deleteButton" class="warning" onclick="deleteSave()">Delete your save file</button><br>
+ 	 <button id="saveButton" class="save" onclick="saveButton()">Save Your Progress</button>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
