--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
  	 <!-- Added so no one could press the button :) -->
  	 <button onclick="incrementValue(cPC)" value="Increment Value" class="rainbow"/>Get Cookies</button>
  	 <br />
- 	 <button id="buyCursor" onclick="buyUpg1()">Buy a Cursor</button>
- 	 <br />
- 	 <input type="text" class="rainbow" id="aOC" placeholder="Hi :)" readonly="true"><br>
+ 	 <button id="bC" onclick="buyUpg1()">Buy a Cursor</button><br>
+ 	 <button id="aOC" disabled="true">0</button>
+ 	 <br /><br>
  	 <button id="deleteButton" class="warning" onclick="deleteSave()">Delete your save file</button><br>
  	 <button id="saveButton" class="save" onclick="saveButton()">Save Your Progress</button>
 	<script type="text/javascript" src="app.js"></script>
