--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
  	 <!-- Added so no one could press the button :) -->
  	 <button onclick="incrementValue(cPC)" value="Increment Value" class="rainbow"/>Get Cookies</button>
  	 <br />
- 	 <button id="bC" onclick="buyUpg1()">Buy a Cursor</button><br>
- 	 <button id="aOC" disabled="true">0</button>
+ 	 <button id="bC" class="cPS" onclick="buyUpg1()">Buy a Cursor</button><br>
+ 	 <button id="aOC" class="cPS" disabled="true">0</button>
  	 <br /><br>
+ 	 <button id="bOG">Buy a grandma</button><br>
+ 	 <button id="easterEggOne" onclick="easterEgg(1);"></button><br>
+ 	 <button id="aOG" disabled="true">0</button><br>
  	 <button id="deleteButton" class="warning" onclick="deleteSave()">Delete your save file</button><br>
  	 <button id="saveButton" class="save" onclick="saveButton()">Save Your Progress</button>
 	<script type="text/javascript" src="app.js"></script>
