--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<h1>Cookie Clicker V0.022</h1>
+	<h1>Cookie Clicker V0.03</h1>
  	 <input type="button" id="nOC" value="0" class="rainbow" readonly="readonly" disabled="true"/>
  	 <!-- Added so no one could press the button :) -->
  	 <button onclick="incrementValue(cPC)" value="Increment Value" class="rainbow"/>Get Cookies</button>
  	 <br />
- 	 <button id="bC" class="cPS" onclick="buyUpg1()">Buy a Cursor</button><br>
+ 	 <button id="bC" class="cPS" onclick="buyUpg1()">Buy a Cursor</button>
  	 <button id="aOC" class="cPS" disabled="true">0</button>
  	 <br /><br>
- 	 <button id="bOG">Buy a grandma</button><br>
- 	 <button id="easterEggOne" onclick="easterEgg(1);"></button><br>
+ 	 <button id="bOG" onclick="buyUpg2()">Buy a grandma</button>
  	 <button id="aOG" disabled="true">0</button><br>
  	 <button id="deleteButton" class="warning" onclick="deleteSave()">Delete your save file</button><br>
  	 <button id="saveButton" class="save" onclick="saveButton()">Save Your Progress</button>
