--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<h1>Cookie Clicker V0.03</h1>
+	<h1 ondblclick="godMode()">Cookie Clicker V0.03</h1>
  	 <input type="button" id="nOC" value="0" class="rainbow" readonly="readonly" disabled="true"/>
  	 <!-- Added so no one could press the button :) -->
  	 <button onclick="incrementValue(cPC)" value="Increment Value" class="rainbow"/>Get Cookies</button>
@@ -16,7 +16,9 @@
  	 <button id="bOG" onclick="buyUpg2()">Buy a grandma</button>
  	 <button id="aOG" disabled="true">0</button><br>
  	 <button id="deleteButton" class="warning" onclick="deleteSave()">Delete your save file</button><br>
- 	 <button id="saveButton" class="save" onclick="saveButton()">Save Your Progress</button>
+ 	 <button id="saveButton" class="save" onclick="saveButton()">Save Your Progress</button><br>
+ 	 <button id="lightMode" onclick="light()">White Background</button>
+ 	 <button id="darkMode" onclick="dark()">Dark Background</button>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
