--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<h1 ondblclick="godMode()">Cookie Clicker V0.03</h1>
- 	 <input type="button" id="nOC" value="0" class="rainbow" readonly="readonly" disabled="true"/>
+	<h1 ondblclick="godMode()">Cookie Clicker V0.04</h1>
+ 	 <button type="button" id="nOC" value="0" class="rainbow" readonly="readonly" disabled="true"/>
  	 <!-- Added so no one could press the button :) -->
  	 <button onclick="incrementValue(cPC)" value="Increment Value" class="rainbow"/>Get Cookies</button>
  	 <br />
