Fixed Cookie Counter

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1 ondblclick="godMode()">Cookie Clicker V0.04</h1>
- 	 <button type="button" id="nOC" value="0" class="rainbow" readonly="readonly" disabled="true"/>
+ 	 <input type="button" id="nOC" value="0" class="rainbow" readonly="readonly" disabled="true"/>
  	 <!-- Added so no one could press the button :) -->
  	 <button onclick="incrementValue(cPC)" value="Increment Value" class="rainbow"/>Get Cookies</button>
  	 <br />
